--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon --exec ts-node src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,14 @@
   "bugs": {
     "url": "https://github.com/saulotarsobc/sqlite-nodejs/issues"
   },
-  "homepage": "https://github.com/saulotarsobc/sqlite-nodejs#readme"
+  "homepage": "https://github.com/saulotarsobc/sqlite-nodejs#readme",
+  "dependencies": {
+    "sequelize": "^6.28.0",
+    "sqlite3": "^5.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20",
+    "tsc-node": "^0.0.3",
+    "typescript": "^4.9.5"
+  }
 }
