--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "sequelize": "^6.28.0",
     "sqlite3": "^5.1.4"
   },
   "devDependencies": {
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/file-saver": "^2.0.5",
     "nodemon": "^2.0.20",
     "tsc-node": "^0.0.3",
     "typescript": "^4.9.5"
